--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -36,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "htts://Dacosta96.github.io/Portfolio",
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
